--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -330,25 +330,25 @@
         "name": "Kardelen Pasta"
     },
     "browni": {
-        "name": "Browni"
+        "name": "Browni ( Italya ) "
     },
     "magnolia_cake": {
-        "name": "Magnolia Pasta"
+        "name": "Magnolia Pasta (ABD)"
     },
     "san_sebastian_(spain)": {
-        "name": "San Sebastian (İspanya)"
+        "name": "San Sebastian ( İspanya )"
     },
     "medovik_(russia)": {
         "name": "Medovik ( Rusya)"
     },
     "schwarzwälder_kirschtorte_(germany)": {
-        "name": "Karaorman Pastası (Schwazwalderckirschtorte)  (Almanya)"
+        "name": "Karaorman Pastası (Schwazwalderckirschtorte -Almanya )"
     },
     "käsesahne_torte_(germany)": {
-        "name": "Peynir Kreması Pastası (Almanya)"
+        "name": "Peynir Kremalı Pasta ( Kasesahne Kuche - Almanya)"
     },
     "bienenstich_cake_(germany)": {
-        "name": "Bienenstich (Arı Sokması) Pastası (Almanya)"
+        "name": "Arı Sokması Pastası  ( Bienenstich -Almanya)"
     },
     "strawberry_and_chocolate__cake": {
         "name": "Çilekli Çikolatalı Pasta (Rusya)"
@@ -360,10 +360,10 @@
         "name": "Linzer Turtası (Almanya)"
     },
     "trifle_(england)": {
-        "name": "Trifle (İngiltere)"
+        "name": "Trifle ( İngiltere )"
     },
     "pastel_de_nata_(portugal)": {
-        "name": "Pastel de Nata (Portekiz)"
+        "name": "Pastel de Nata ( Portekiz )"
     },
     "fruit_cakes": {
         "name": "Meyveli Pastalar"
