--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -106,7 +106,9 @@
             "profitol_cake",
             "nutella_cake",
             "gluten_free_and_vegan_browni",
-            "gluten_free_and_vegan_cake"
+            "gluten_free_and_vegan_cake",
+            "donut_pink",
+            "donut__chocolate"
         ],
         "homemade_sweets_(please_ask_for_daily_cakes)": [
             "cheesecake_(a_diffenrent_variety_is_cooked_every_day._please_get_information)",
