--- a/src/locales/menu_en.json
+++ b/src/locales/menu_en.json
@@ -317,6 +317,12 @@
     "gluten_free_and_vegan_cake": {
         "name": "Gluten Free and Vegan CAKE"
     },
+    "donut_pink": {
+        "name": "Donut Pink"
+    },
+    "donut__chocolate": {
+        "name": "Donut  Chocolate"
+    },
     "cheesecake_(a_diffenrent_variety_is_cooked_every_day._please_get_information)": {
         "name": "Cheesecake (A diffenrent variety is cooked every day. Please get information)"
     },
