--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -317,6 +317,12 @@
     "gluten_free_and_vegan_cake": {
         "name": "Glutensiz ve Vegan EKLER"
     },
+    "donut_pink": {
+        "name": "Donut Pembe"
+    },
+    "donut__chocolate": {
+        "name": "Donut Çikolatalı"
+    },
     "cheesecake_(a_diffenrent_variety_is_cooked_every_day._please_get_information)": {
         "name": "Cheescake ( Her gün farklı bir çeşit pişiyor. Lütfen bilgi alınız)"
     },
