--- a/src/locales/menu_en.json
+++ b/src/locales/menu_en.json
@@ -296,6 +296,9 @@
     "naren_fruizy_(katkısız_meyve_suları)": {
         "name": "Naren Fruizy (Katkısız Meyve Suları)"
     },
+    "cappy": {
+        "name": "Cappy"
+    },
     "soda_types": {
         "name": "Soda Types"
     },
@@ -457,6 +460,9 @@
     },
     "bowl": {
         "name": "Bowl"
+    },
+    "fig_dessert_(_sugar-free)": {
+        "name": "Fig Dessert ( sugar-free)"
     },
     "decaffeinated_coffee_price_difference_": {
         "name": "Decaffeinated Coffee price difference "
