--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -60,6 +60,7 @@
             "iced_flat_white",
             "iced_mocha",
             "iced_white_chocolate_mocha",
+            "iced__macchiato",
             "iced_latte",
             "iced_red_eye",
             "iced_black_eye",
