--- a/src/locales/menu_en.json
+++ b/src/locales/menu_en.json
@@ -200,6 +200,9 @@
     "iced_white_chocolate_mocha": {
         "name": "Iced White Chocolate Mocha"
     },
+    "iced__macchiato": {
+        "name": "Iced  Macchiato"
+    },
     "iced_latte": {
         "name": "Iced Latte"
     },
