--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -163,7 +163,8 @@
             "breakfast_plate",
             "toast_with_cheddar",
             "toast_with_cheddar+salami",
-            "sandwich_(cheese_+cheddar+salami)"
+            "sandwich_(cheese_+cheddar+salami)",
+            "mini_sandwich"
         ],
         "fit_world": [
             "fruit_salad",
