--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -458,6 +458,9 @@
     "sandwich_(cheese_+cheddar+salami)": {
         "name": "Sandeviç (Kaşar Peyniri+Chedar+Salam)"
     },
+    "mini_sandwich": {
+        "name": "Mini Sandeviç"
+    },
     "glutein_free_cake": {
         "name": "Gluteinsiz Ekler"
     },
