--- a/src/locales/menu_static.json
+++ b/src/locales/menu_static.json
@@ -27,15 +27,35 @@
     "fit_world": {},
     "extras_(selection_will_be_added_to_the_price)": {},
     "espresso": {
-        "medium_price": 110,
-        "large_price": 140,
+        "medium_price": 140,
+        "large_price": 150,
+        "picture_small": "menu_pics/hot_coffees_small.webp",
+        "picture_large": "menu_pics/hot_coffees_large.webp"
+    },
+    "espresso_macchiato": {
+        "large_price": 150,
         "picture_small": "menu_pics/hot_coffees_small.webp",
         "picture_large": "menu_pics/hot_coffees_large.webp"
     },
     "lungo": {
+        "large_price": 150,
+        "picture_small": "menu_pics/hot_coffees_small.webp",
+        "picture_large": "menu_pics/hot_coffees_large.webp"
+    },
+    "cortado": {
+        "large_price": 130,
+        "picture_small": "menu_pics/cortado_small.webp",
+        "picture_large": "menu_pics/cortado_large.webp"
+    },
+    "cafe_bombom": {
         "large_price": 125,
         "picture_small": "menu_pics/hot_coffees_small.webp",
         "picture_large": "menu_pics/hot_coffees_large.webp"
+    },
+    "filter_coffee": {
+        "large_price": 125,
+        "picture_small": "menu_pics/filter_coffee_small.webp",
+        "picture_large": "menu_pics/filter_coffee_large.webp"
     },
     "con_panne": {
         "large_price": 120,
@@ -51,11 +71,6 @@
         "large_price": 140,
         "picture_small": "menu_pics/hot_coffees_small.webp",
         "picture_large": "menu_pics/hot_coffees_large.webp"
-    },
-    "cortado": {
-        "large_price": 130,
-        "picture_small": "menu_pics/cortado_small.webp",
-        "picture_large": "menu_pics/cortado_large.webp"
     },
     "cappuccino": {
         "large_price": 135,
@@ -91,16 +106,6 @@
         "large_price": 160,
         "picture_small": "menu_pics/hot_coffees_small.webp",
         "picture_large": "menu_pics/hot_coffees_large.webp"
-    },
-    "cafe_bombom": {
-        "large_price": 125,
-        "picture_small": "menu_pics/hot_coffees_small.webp",
-        "picture_large": "menu_pics/hot_coffees_large.webp"
-    },
-    "filter_coffee": {
-        "large_price": 125,
-        "picture_small": "menu_pics/filter_coffee_small.webp",
-        "picture_large": "menu_pics/filter_coffee_large.webp"
     },
     "black_eye": {
         "large_price": 165,
