--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -76,14 +76,13 @@
             "iced_matcha_latte",
             "iced_blue_lagoon",
             "iced_chocolate",
-            "blue_lagon",
             "color_mix",
             "island_rush_cooler",
-            "mor_zest",
-            "night_&_green",
+            "blu_lagon",
             "pina_colada",
             "summer_brezze",
             "velvet_dream",
+            "green_benefi",
             "iced_tea_-hibiskus_cold_",
             "iced_tea-_blue__butterfly_orange",
             "iced_tea-_mango_orange",
