--- a/src/locales/menu.json
+++ b/src/locales/menu.json
@@ -152,7 +152,7 @@
         "savory_world": [
             "croissant_(plain)",
             "croissant_(chocolate)",
-            "cheese_pastry_(short)"
+            "mini_patty__(_cheese_/_spinach)_"
         ],
         "homemade_savory_food_(please_ask_for_daily_made_foods)": [
             "world_of_roll_pastry_(spinach+cheese_/_three_cheese_/_patato)"
