--- a/src/locales/menu_en.json
+++ b/src/locales/menu_en.json
@@ -434,8 +434,8 @@
     "croissant_(chocolate)": {
         "name": "Croissant (chocolate)"
     },
-    "cheese_pastry_(short)": {
-        "name": "Cheese Pastry (short)"
+    "mini_patty__(_cheese_/_spinach)_": {
+        "name": "Mini Patty  ( Cheese / Spinach) "
     },
     "world_of_roll_pastry_(spinach+cheese_/_three_cheese_/_patato)": {
         "name": "World of Roll Pastry (spinach+cheese / Three cheese / patato)"
