--- a/src/locales/menu_tr.json
+++ b/src/locales/menu_tr.json
@@ -434,8 +434,8 @@
     "croissant_(chocolate)": {
         "name": "Kruvasan  (çikolatalı)"
     },
-    "cheese_pastry_(short)": {
-        "name": "Peynirli Börek (kısa -adet)"
+    "mini_patty__(_cheese_/_spinach)_": {
+        "name": "Mini Börek ( Peynirli / Ispanaklı ) (adet)"
     },
     "world_of_roll_pastry_(spinach+cheese_/_three_cheese_/_patato)": {
         "name": "Rulo Börek Dünyası (Ispanaklı+3 Peynirli / 3 Peynirli / Patatesli)"
